# batsim-project_team1

./: README.md  flake.nix  meson.build  print.py  results.py  run_easy_variants.py
assets/: 100jobs.json  10jobs.json  10jobs_10000sec.json  10jobs_1000sec.json  10jobs_100sec.json  10jobs_10sec.json  10machines.xml  1machine.xml  200jobs.json  20machines.xml  2jobs.json  30jobs.json  32machines.xml  3machines.xml  40machines.xml  500_10_jobs.json  500_1_jobs.json  500_2_jobs.json  500_3_jobs.json  500_4_jobs.json  500_5_jobs.json  500_6_jobs.json  500_7_jobs.json  500_8_jobs.json  500_9_jobs.json  500jobs.json  501jobs.json  50jobs.json  5jobs.json  generate_config.py
src/: easy_fcfs_fcfs.cpp  easy_lqf_lqf.cpp  easy_variants.cpp
src/one-by-one/: easy_exp_exp.cpp  easy_lcfs_lcfs.cpp  easy_lpf_lpf.cpp  easy_spf_spf.cpp  easy_sqf_sqf.cpp
src/others/: LPF.cpp  SPF.cpp.cpp  easy.cpp  easy_backfilling.cpp  exec1by1.cpp  fcfs.cpp
